@@ -18,7 +18,6 @@
 // DGM core
 #include "classes/Error.hpp"
 #include "classes/Buffer.hpp"
-#include "classes/RingBuffer.hpp"
 #include "classes/Objects.hpp"
 #include "classes/Collision.hpp"
 #include "classes/Math.hpp"
@@ -32,7 +31,6 @@
 #include "classes/Animation.hpp"
 #include "classes/TileMap.hpp"
 #include "classes/ResourceManager.hpp"
-#include "classes/Shell.hpp"
 #include "classes/Camera.hpp"
 
 // Particle Systems
